--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,7 +8,7 @@
       <%= submit_tag "Search" %>
     <% end %>
     
-    <%= link_to 'Back', events_path %>
+    <%= button_to 'Back', events_path, method: :get %>
   </div>
 
   <% @events.each do |event| %>
@@ -21,11 +21,11 @@
         <p>Date: <%= event.date_from%> - <%=event.date_to %></p>
         <p>Location: <%= event.location %></p>
 
-        <%= link_to 'View Details', event_path(event) %> 
+        <%= button_to 'View Details', event_path(event), method: :get %> 
       </div>
       <% if current_user == event.user %>
-        <%= link_to 'Edit', edit_event_path(event) %> |
-        <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
+        <%= button_to 'Edit', edit_event_path(event), method: :get %> |
+        <%= button_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
       <% end %>
     </div>
     <% end %>
