--- a/app/views/worker_profiles/_form.html.erb
+++ b/app/views/worker_profiles/_form.html.erb
@@ -1,43 +1,47 @@
-<h1>Setup your profile</h1>
-<%= form_with(model: [ current_worker, @worker_profile], url: worker_profiles_path, local: true) do |form| %>
-   
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
+<div class="form-container">
+  <div class="form-card">
+    <%= form_with(model: [ current_worker, @worker_profile], url: worker_profiles_path, local: true) do |form| %>
+      
+      <div class="field">
+        <%= form.label :first_name %>
+        <%= form.text_field :first_name %>
+      </div>
+      <div class="field">
+        <%= form.label :last_name %>
+        <%= form.text_field :last_name %>
+      </div>
+      <div class="field">
+        <%= form.label :city %>
+        <%= form.text_field :city %>
+      </div>
+      <div class="field">
+        <%= form.label :country %>
+        <%= form.text_field :country %>
+      </div>
+      <div class="field">
+        <%= form.label :number %>
+        <%= form.text_field :number %>
+      </div>
+      <div class='field'>
+        <%= form.label :bio %>
+        <%= form.text_area :bio %>
+      </div>
+      <div class="field">
+      <%= form.label :photo %> <%= form.file_field :photo, accept:
+      'image/png,image/gif,image/jpeg,image/jpg' %>
+      </div>
+      <div class="field">
+      <%= form.label :documents %> <%= form.file_field :documents, accept:
+      'doc/pdf', multiple: true %>
+      </div>
+      <div class="field">
+      <%= form.label :resume %> <%= form.file_field :resume, accept:
+      'resume/pdf' %>
+      </div>
+      <div class="actions">
+        <%= form.submit %>
+        <%= button_to 'Back', worker_dashboard_path, method: :get%>
+      </div>
+    <% end %>
   </div>
-   <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= form.label :city %>
-    <%= form.text_field :city %>
-  </div>
-  <div class="field">
-    <%= form.label :country %>
-    <%= form.text_field :country %>
-  </div>
-  <div class="field">
-    <%= form.label :number %>
-    <%= form.text_field :number %>
-  </div>
-  <div class='field'>
-    <%= form.label :bio %>
-    <%= form.text_area :bio %>
-  </div>
-  <div>
-  <%= form.label :photo %> <%= form.file_field :photo, accept:
-  'image/png,image/gif,image/jpeg,image/jpg' %>
-  </div>
-   <div>
-  <%= form.label :documents %> <%= form.file_field :documents, accept:
-  'doc/pdf', multiple: true %>
-  </div>
-   <div>
-  <%= form.label :resume %> <%= form.file_field :resume, accept:
-  'resume/pdf' %>
-  </div>
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
