--- a/app/assets/stylesheets/user_profile.scss
+++ b/app/assets/stylesheets/user_profile.scss
@@ -1,15 +1,21 @@
 .user-dashboard-container {
   display: flex;
+  flex-direction: row;
 }
 
 .user-dashboard-container h2 {
   margin-left: 20px;
+  color: #2F2D2D;
+}
+
+.user-dashboard-container p {
+  color: #2F2D2D;
 }
 
 .user-event-card {
   display: flex;
   flex-direction: column;
-  background-color: seashell;
+  background-color: rgba(248, 227, 202, 0.7);
   margin: 20px;
   width: 40vw;
   padding: 20px;
@@ -18,12 +24,12 @@
 .user-event-card img {
   display: flex;
   flex-direction: column;
-  width: 200px;
+  width: 150px;
   margin-right: 30px;
 }
 
 .user-applications-card {
-  background-color: seashell;
+  background-color: rgba(248, 227, 202, 0.7);
   margin: 20px;
   width: 40vw;
   padding: 20px;
@@ -55,5 +61,27 @@
 .event-name {
   font-size: 25px;
   font-weight: bolder;
+}
+
+.download-button {
+  margin-top: 5px;
+}
+
+.view-profile-button {
+  margin-top: 5px;
+}
+
+.info input[type="submit"] {
+  background-color:rgb(78, 60, 43);
+  border-radius: 30px;
+  border: none;
+  height: 4vh;
+  width: 6vw;
+  color: rgb(243, 203, 157);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.position-links-dashboard {
+  display: flex;
 }
 
