--- a/app/views/worker_profiles/show.html.erb
+++ b/app/views/worker_profiles/show.html.erb
@@ -15,23 +15,25 @@
       </p>
       <p class="worker-location">
       <%= image_tag("pin.png", :alt => "location pin") %>
-      Location: <%= current_worker.worker_profile.city %>, <%= current_worker.worker_profile.country %>
+     <b>Location: </b><%= current_worker.worker_profile.city %>, <%= current_worker.worker_profile.country %>
       </p>
       <p class="worker-email">
       <%= image_tag("mail.png", :alt => "email pin") %>
-      Contact email: <%= current_worker.email %>
+      <b>Contact email: </b><%= current_worker.email %>
       </p>
       <p class="worker-bio">
       <%= image_tag("user.png", :alt => "bio pin") %>
       <%= current_worker.worker_profile.bio %>
       </p>
-      <p>
-      <%= link_to 'Download CV', download_resume_path %> 
-      </p>
-      <p>
-      <%= link_to 'Download Qualification:', download_document_path %> 
-      </p>
-      <%= link_to 'Edit Profile', edit_worker_profile_path(current_worker.worker_profile) %>
+      <div class="links">
+        <p>
+        <%= button_to 'Download CV', download_resume_path, method: :get %> 
+        </p><br>
+        <p>
+        <%= button_to 'Download Qualification', download_document_path, method: :get %> 
+        </p><br>
+        <%= button_to 'Edit Profile', edit_worker_profile_path(current_worker.worker_profile), method: :get %>
+      </div>
     </div>
   </div>
 
