--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -88,3 +88,9 @@
   color: rgb(243, 203, 157);
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+
+.new-event h1 {
+  color: rgb(243, 203, 157);
+  font-size: x-large;
+  margin-left: 100px;
+}
