--- a/app/assets/stylesheets/worker_profiles.scss
+++ b/app/assets/stylesheets/worker_profiles.scss
@@ -137,7 +137,7 @@ input[type="submit"]:hover {
   color: rgb(78, 60, 43);
 }
 
-.links {
+.links-worker {
   display: flex;
   margin-top: 20px;
 }
