--- a/app/views/worker_profiles/show.html.erb
+++ b/app/views/worker_profiles/show.html.erb
@@ -25,7 +25,7 @@
       <%= image_tag("user.png", :alt => "bio pin") %>
       <%= current_worker.worker_profile.bio %>
       </p>
-      <div class="links">
+      <div class="links-worker">
         <p>
         <%= button_to 'Download CV', download_resume_path, method: :get %> 
         </p><br>
