--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -9,6 +9,7 @@
   width: 50vw;
   padding: 5vw;
   align-items: center;
+  margin-top: 100px;
 }
 
 .field {
@@ -25,4 +26,12 @@
   color:rgb(78, 60, 43);
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   margin: 10px;
+}
+
+.form-container h2 {
+  color: rgb(78, 60, 43);
+}
+
+.form-container p {
+  color: rgb(78, 60, 43);
 }
