--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -6,4 +6,14 @@
   color: rgb(247, 227, 184);
 }
 
+.homepage-links {
+  display: flex;
+  margin-left: 30px;
+}
+
+.homepage-links p {
+  color:  rgb(247, 227, 184);
+  font-size: x-large;
+}
+
 
