--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,49 +1,52 @@
-<%= form_with(model: event, local: true) do |form| %>
-  <% if event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
-      <ul>
-        <% event.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+<div class="form-container">
+  <div class="form-card">
+    <%= form_with(model: event, local: true) do |form| %>
+      <% if event.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
+          <ul>
+            <% event.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div class="field">
+        <%= form.label :name %>
+        <%= form.text_field :name %>
+      </div>
+      <div class="field">
+        <%= form.label :location %>
+        <%= form.text_field :location %>
+      </div>
+      <div class='field'>
+        <%= form.label :date_from %>
+        <%= form.date_field :date_from %>
+      </div>
+      <div class='field'>
+        <%= form.label :date_to %>
+        <%= form.date_field :date_to %>
+      </div>
+      <div class="field">
+        <%= form.label :external_link %>
+        <%= form.text_field :external_link %>
+      </div>
+      <div class="field">
+        <%= form.label :contact_email %>
+        <%= form.text_field :contact_email %>
+      </div>
+      <div class="field">
+        <%= form.label :description %>
+        <%= form.text_area :description %>
+      </div>
+      <div>
+      <%= form.label :picture %> <%= form.file_field :picture, accept:
+      'image/png,image/gif,image/jpeg,image/jpg' %>
+      </div>
+      <div class="actions">
+        <%= form.submit %>
+      </div>
+    <% end %>
   </div>
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location %>
-  </div>
-  <div class='field'>
-    <%= form.label :date_from %>
-    <%= form.date_field :date_from %>
-  </div>
-  <div class='field'>
-    <%= form.label :date_to %>
-    <%= form.date_field :date_to %>
-  </div>
-  <div class="field">
-    <%= form.label :external_link %>
-    <%= form.text_field :external_link %>
-  </div>
-   </div>
-  <div class="field">
-    <%= form.label :contact_email %>
-    <%= form.text_field :contact_email %>
-  </div>
-   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-  <div>
-  <%= form.label :picture %> <%= form.file_field :picture, accept:
-  'image/png,image/gif,image/jpeg,image/jpg' %>
-  </div>
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
 
