--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Event</h1>
+<div class="new-event">
+  <h1>Create New Event:</h1>
 
-<%= render 'form', event: @event %>
+  <%= render 'form', event: @event %>
 
-<%= link_to 'Back', user_dashboard_path %>
+  <%= button_to 'Back', user_dashboard_path, method: :get %>
+</div>
