--- a/app/views/positions/edit.html.erb
+++ b/app/views/positions/edit.html.erb
@@ -1,29 +1,34 @@
-<h2>Edit Position:</h2>
+<div class="form-container">
+  <div class="form-card">
 
-<%= form_with(model: @position, url: event_position_path(@event, @position), local: true) do |form| %>
-  <p>
-    <%= form.label :position_type %><br>
-    <%= form.text_field :position_type %>
-  </p>
-  <p>
-    <%= form.label :rate %><br>
-    <%= form.text_field :rate %>
-  </p>
-  <p>
-    <%= form.label :hours %><br>
-    <%= form.text_field :hours %>
-  </p>
-  <p>
-    <%= form.label :requirements %><br>
-    <%= form.text_area :requirements %>
-  </p>
-   <p>
-    <%= form.label :additional_information %><br>
-    <%= form.text_area :additional_information %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+    <h2>Edit Position:</h2>
 
-<%= link_to "Back", user_dashboard_path %>
+    <%= form_with(model: @position, url: event_position_path(@event, @position), local: true) do |form| %>
+      <p>
+        <%= form.label :position_type %><br>
+        <%= form.text_field :position_type %>
+      </p>
+      <p>
+        <%= form.label :rate %><br>
+        <%= form.text_field :rate %>
+      </p>
+      <p>
+        <%= form.label :hours %><br>
+        <%= form.text_field :hours %>
+      </p>
+      <p>
+        <%= form.label :requirements %><br>
+        <%= form.text_area :requirements %>
+      </p>
+      <p>
+        <%= form.label :additional_information %><br>
+        <%= form.text_area :additional_information %>
+      </p>
+      <p>
+        <%= form.submit %>
+      </p>
+    <% end %>
+  </div>
+</div>
+
+<%= button_to "Back", user_dashboard_path, method: :get %>
