--- a/app/views/positions/new.html.erb
+++ b/app/views/positions/new.html.erb
@@ -1,27 +1,35 @@
-<%= form_with(model: [ @event, @event.positions.build ], local: true) do |form| %>
-  <p>
-    <%= form.label :position_type %><br>
-    <%= form.text_field :position_type %>
-  </p>
-  <p>
-    <%= form.label :rate %><br>
-    <%= form.text_field :rate %>
-  </p>
-  <p>
-    <%= form.label :hours %><br>
-    <%= form.text_field :hours %>
-  </p>
-  <p>
-    <%= form.label :requirements %><br>
-    <%= form.text_area :requirements %>
-  </p>
-   <p>
-    <%= form.label :additional_information %><br>
-    <%= form.text_area :additional_information %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<div class="form-container">
+  <div class="form-card">
 
-<%= link_to "Back", user_dashboard_path %>
+  <h2> Create a new position:</h2>
+
+    <%= form_with(model: [ @event, @event.positions.build ], local: true) do |form| %>
+      <p>
+        <%= form.label :position_type %><br>
+        <%= form.text_field :position_type %>
+      </p>
+      <p>
+        <%= form.label :rate %><br>
+        <%= form.text_field :rate %>
+      </p>
+      <p>
+        <%= form.label :hours %><br>
+        <%= form.text_field :hours %>
+      </p>
+      <p>
+        <%= form.label :requirements %><br>
+        <%= form.text_area :requirements %>
+      </p>
+      <p>
+        <%= form.label :additional_information %><br>
+        <%= form.text_area :additional_information %>
+      </p>
+      <p>
+        <%= form.submit %>
+      </p>
+    <% end %>
+
+  </div>
+</div>
+
+<%= button_to "Back", user_dashboard_path, method: :get %>
