styled the login and sign up pages and fixed the documents download

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,3 +28,13 @@
    margin-left: 80px;
  }
 
+ .login-container {
+   display: flex;
+   justify-content: center;
+ }
+
+ .login {
+   background-color:  rgba(243, 203, 157, 0.8);
+   padding: 10vw;
+ }
+
