--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -41,7 +41,7 @@
         <p><b>Event: </b><%= event.name %></p>
         <p><b>Position: </b><%= application.position.position_type %></p>
         <p><b>Applicant Name:</b> <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
-        <p class="download-button"><%= button_to 'Download CV', download_resume_path, method: :get %></p>
+        <p class="download-button"><%= button_to 'Download CV', download_resume_path(application.worker), method: :get %></p>
         <p class="view-profile-button"><%= button_to 'View Profile', worker_path(application.worker), method: :get %>
         <div class="app-buttons">
           <p><%= button_to 'Accept', accept_event_position_path(event, application), method: :patch %>
@@ -59,7 +59,7 @@
           <p><b>Position: </b><%= application.position.position_type %></p>
           <p><b>Applicant Name: </b><%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
           <div class="app-buttons">
-            <p><%= button_to 'Download CV', download_resume_path, method: :get %></p>
+            <p><%= button_to 'Download CV', download_resume_path(application.worker), method: :get %></p>
             <p><%= button_to 'View Profile', worker_path(application.worker), method: :get %>
           </div>
           <p>Status: Accepted</p>
@@ -75,7 +75,7 @@
           <p>Position: <%= application.position.position_type %></p>
           <p>Applicant Name: <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
           <div class="app-buttons">
-            <p><%= button_to 'Download CV', download_resume_path, method: :get %></p>
+            <p><%= button_to 'Download CV', download_resume_path(application.worker), method: :get %></p>
             <p><%= button_to 'View Profile', worker_path(application.worker), method: :get %>
           </div>
           <p>Status: Rejected</p>
