minimised database calls

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -12,35 +12,35 @@
         </div>
       <% end %>
       <div class="field">
-        <%= form.label :name %>
+        <%= form.label :name %><br>
         <%= form.text_field :name %>
       </div>
       <div class="field">
-        <%= form.label :location %>
+        <%= form.label :location %><br>
         <%= form.text_field :location %>
       </div>
       <div class='field'>
-        <%= form.label :date_from %>
+        <%= form.label :date_from %><br>
         <%= form.date_field :date_from %>
       </div>
       <div class='field'>
-        <%= form.label :date_to %>
+        <%= form.label :date_to %><br>
         <%= form.date_field :date_to %>
       </div>
       <div class="field">
-        <%= form.label :external_link %>
+        <%= form.label :external_link %><br>
         <%= form.text_field :external_link %>
       </div>
       <div class="field">
-        <%= form.label :contact_email %>
+        <%= form.label :contact_email %><br>
         <%= form.text_field :contact_email %>
       </div>
       <div class="field">
-        <%= form.label :description %>
+        <%= form.label :description %><br>
         <%= form.text_area :description %>
       </div>
       <div>
-      <%= form.label :picture %> <%= form.file_field :picture, accept:
+      <%= form.label :picture %> <br><%= form.file_field :picture, accept:
       'image/png,image/gif,image/jpeg,image/jpg' %>
       </div>
       <div class="actions">
