--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -47,6 +47,7 @@
           <p><%= button_to 'Accept', accept_event_position_path(event, application), method: :patch %>
           <p><%= button_to 'Reject', reject_event_position_path(event, application), method: :patch %>
         </div>
+        <p>Status: Pending</p>
       </div>
       <% end %>
     <% end %>
