--- a/app/views/worker_profiles/_form.html.erb
+++ b/app/views/worker_profiles/_form.html.erb
@@ -3,39 +3,35 @@
     <%= form_with(model: [current_worker, @worker_profile], url: worker_profiles_path, local: true) do |form| %>
       
       <div class="field">
-        <%= form.label :first_name %>
+        <%= form.label :first_name %><br>
         <%= form.text_field :first_name %>
       </div>
       <div class="field">
-        <%= form.label :last_name %>
+        <%= form.label :last_name %><br>
         <%= form.text_field :last_name %>
       </div>
       <div class="field">
-        <%= form.label :city %>
+        <%= form.label :city %><br>
         <%= form.text_field :city %>
       </div>
       <div class="field">
-        <%= form.label :country %>
+        <%= form.label :country %><br>
         <%= form.text_field :country %>
       </div>
-      <div class="field">
-        <%= form.label :number %>
-        <%= form.text_field :number %>
-      </div>
       <div class='field'>
-        <%= form.label :bio %>
+        <%= form.label :bio %><br>
         <%= form.text_area :bio %>
       </div>
       <div class="field">
-      <%= form.label :photo %> <%= form.file_field :photo, accept:
+      <%= form.label :photo %> <br><%= form.file_field :photo, accept:
       'image/png,image/gif,image/jpeg,image/jpg' %>
       </div>
       <div class="field">
-      <%= form.label :documents %> <%= form.file_field :documents, accept:
+      <%= form.label :documents %> <br><%= form.file_field :documents, accept:
       'doc/pdf', multiple: true %>
       </div>
       <div class="field">
-      <%= form.label :resume %> <%= form.file_field :resume, accept:
+      <%= form.label :resume %> <br><%= form.file_field :resume, accept:
       'resume/pdf' %>
       </div>
       <div class="actions">
