--- a/app/assets/stylesheets/worker_profiles.scss
+++ b/app/assets/stylesheets/worker_profiles.scss
@@ -119,6 +119,8 @@ input[type="submit"]:hover {
 
 .profile-picture img{
   border-radius: 50%;
+  height: 200px;
+  width: 200px;
 }
 
 .event-show-container p {
