fixed download document

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -10,7 +10,7 @@
 
 .event-card {
   background-color: rgb(243, 203, 157);
-  opacity: 0.8;
+  opacity: 0.9;
   width: 60vw;
   height: 30vh;
   margin: 20px;
@@ -55,7 +55,7 @@
 
 .event-show-card {
   margin: 20px;
-  background-color: rgbA(243, 203, 157, 0.7);
+  background-color: rgba(243, 203, 157, 0.7);
   width: 40vw;
   padding: 20px;
 }
