--- a/app/views/worker_profiles/_form.html.erb
+++ b/app/views/worker_profiles/_form.html.erb
@@ -27,8 +27,8 @@
       'image/png,image/gif,image/jpeg,image/jpg' %>
       </div>
       <div class="field">
-      <%= form.label :documents %> <br><%= form.file_field :documents, accept:
-      'doc/pdf', multiple: true %>
+      <%= form.label :document %> <br><%= form.file_field :document, accept:
+      'doc/pdf' %>
       </div>
       <div class="field">
       <%= form.label :resume %> <br><%= form.file_field :resume, accept:
