--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,7 @@
         <%= button_to 'View Details', event_path(event), method: :get %> 
       </div>
       <% if current_user == event.user %>
-        <%= button_to 'Edit', edit_event_path(event), method: :get %> |
+        <%= button_to 'Edit', edit_event_path(event), method: :get %>
         <%= button_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
       <% end %>
     </div>
