fixed picture in worker view

--- a/app/assets/stylesheets/workers.scss
+++ b/app/assets/stylesheets/workers.scss
@@ -8,6 +8,11 @@
   color: rgb(78, 60, 43);
 }
 
+.worker-profile-view-container img {
+  height: 200px;
+  width: 200px;
+}
+
 .content-worker-profile {
   width: 60vw;
   background-color: rgba(243, 203, 157, 0.7);
