fixed path for edit worker profile

--- a/app/views/worker_profiles/show.html.erb
+++ b/app/views/worker_profiles/show.html.erb
@@ -29,7 +29,7 @@
         <p>
         <%= button_to 'Download Qualification', download_document_path(current_worker), method: :get %> 
         </p><br>
-        <%= button_to 'Edit Profile', edit_worker_profile_path(current_worker.worker_profile), method: :get %>
+        <%= button_to 'Edit Profile', edit_worker_profile_path(current_worker), method: :get %>
       </div>
     </div>
   </div>
