--- a/app/views/worker_profiles/_form.html.erb
+++ b/app/views/worker_profiles/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="form-container">
   <div class="form-card">
-    <%= form_with(model: [current_worker, @worker_profile], url: worker_profiles_path, local: true) do |form| %>
+    <%= form_with(model: @worker_profile, local: true) do |form| %>
       
       <div class="field">
         <%= form.label :first_name %><br>
